test/src/e2e_vm_tests/test_programs/should_fail/array_oob_variable_index/snapshot.toml.disabled
cmds = ["forc test --path {root} --release"]